--- a/src/components/style/Footer.css
+++ b/src/components/style/Footer.css
@@ -1,8 +1,8 @@
 .footer{
     background-color: #333; 
-    padding: 15px; 
+    padding: 15px 0; 
     text-align: center; 
-    position: relative; 
+    position:relative; 
     left: 0; 
     bottom: 0;
     width: 100%;
